tests/samples/invalid/word_size_exceeded.pn
word32 Foo
{
	a: u16,
	b: u16,
	c: u16,
}

word32 Bar
{
	a: u8,
	b: u8,
	c: u8,
	d: u8,
	e: u8,
}
